# momenta

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: android-publish.yml  ci.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 000_initial_schema.py  001_add_settings_table.py  002_drop_unique_constraint.py  003_comments_and_avatar_key.py  004_auto_challenges.py  005_counters_indexes_constraints.py  006_media_pipeline_status.py  007_bookmarks.py  008_worker_leases.py
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  verify_apk.py
android/app/: build.gradle.kts  proguard-rules.pro
android/docs/: ANDROID_ARCHITECTURE.md  (+4 more)
app/: cli.py  config.py  db.py  main.py  security.py  version.py
docs/: ADMIN.md  ANDROID_UI_CONCEPT.md  API.md  ARCHITECTURE.md  DEPLOY_TRUENAS.md  DESIGN_SYSTEM.md  MEDIA_STORAGE.md  PRIVACY_POLICY.md  RELEASE_CHECKLIST.md  RELEASE_STYLE.md  SECURITY.md  TERMS.md
scripts/: backup_truenas.sh  check_android_update_metadata.py  check_brand_assets.py  check_mojibake.py  ci_backup_restore_smoke.sh  restore_truenas.sh
tests/: conftest.py  test_admin.py  test_android_integrity.py  test_app_latest.py  test_auth.py  test_backup_scripts.py  test_bookmarks.py  test_challenges.py  test_dates.py  test_db_integrity.py  test_external_services.py  test_health.py  test_media_cleanup.py  test_posts.py  test_rate_limit.py  test_streaming_upload.py  test_users.py  test_worker.py
(+194 files in other folders)
